# gRPC-Differential-Service

./: Design Doc_ gRPC based protocol buffer message Differential Service.docx  README.md  message_read.proto  message_service.proto  message_write.proto
differential_client/: CMakeLists.txt  Client_util.cpp  Client_util.h  Makefile  ServiceClient.cpp  ServiceClient.h  client_util.cpp  client_util.h  differential_client.cc  differential_service_client.cpp  differential_service_client.h
differential_client/Google_tests/: CMakeLists.txt  test1.cpp  test2.cpp  unit_test_diff.cpp
differential_client/differential_client_lib/: CMakeLists.txt  ServiceClient.cpp  ServiceClient.h  differential_client.grpc.pb.cc  differential_client.grpc.pb.h  differential_client.pb.cc  differential_client.pb.h  differential_service.grpc.pb.cc  differential_service.grpc.pb.h  differential_service.pb.cc  differential_service.pb.h  differential_test.grpc.pb.cc  differential_test.grpc.pb.h  differential_test.pb.cc  differential_test.pb.h
differential_server/: CMakeLists.txt  Makefile  differential_server.cc  recycle_codes.txt
differential_server/differential_server_lib/: CMakeLists.txt  differential_server.grpc.pb.cc  differential_server.grpc.pb.h  differential_server.pb.cc  differential_server.pb.h  differential_service.grpc.pb.cc  differential_service.grpc.pb.h  differential_service.pb.cc  differential_service.pb.h
message_read/: Makefile  message_read.cc
message_write/: Makefile  message_write.cc
protos/: differential_client.proto  differential_server.proto  differential_service.proto  differential_test.proto
